--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ buildscript {
     }
 }
 
+plugins {
+    id 'java'
+    id 'application'
+}
+
 def printOutput(def output) {
     return tasks.create("printOutput") {
         println "#educational_plugin_checker_version 1"
@@ -19,15 +24,25 @@ subprojects {
     apply plugin: 'application'
     apply plugin: 'java'
 
-    sourceCompatibility = 17
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(25)
+        }
+        sourceCompatibility = JavaVersion.VERSION_25
+        targetCompatibility = JavaVersion.VERSION_25
+    }
 
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        testImplementation 'org.mockito:mockito-core:4.0.0'
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+        testImplementation 'org.mockito:mockito-core:5.20.0'
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:6.0.1'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.1'
     }
 
     sourceSets {
@@ -39,7 +54,9 @@ subprojects {
         }
     }
 
-    mainClassName = project.hasProperty("mainClass") ? project.getProperty("mainClass") : ""
+    application {
+        mainClass = project.hasProperty("mainClass") ? project.getProperty("mainClass") : ""
+    }
 
     if (project.hasProperty("educationalRun") && "true".equalsIgnoreCase(project.getProperty("educationalRun"))) {
         def runOutput = new ByteArrayOutputStream()
@@ -49,23 +66,5 @@ subprojects {
 
     test {
         useJUnitPlatform()
-    }
-}
-
-project(':util') {
-    dependencies {
-        testImplementation 'org.mockito:mockito-core:4.0.0'
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    }
-
-    test {
-        useJUnitPlatform()
-    }
-}
-
-configure(subprojects.findAll { it.name != 'util' }) {
-    dependencies {
-        implementation project(':util').sourceSets.main.output
-        testImplementation project(':util').sourceSets.test.output
     }
 }
