--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,13 +1,17 @@
 type: marketplace
 title: Elevator-Event-Together-Java
 language: English
-summary: "This is the Elevator Event, hosted by Together Java. Use at least Java 17."
+summary: "This is the Elevator Event, hosted by Together Java. Use at least Java 25."
+vendor:
+  name: Daniel Tischner
 programming_language: Java
-programming_language_version: 17
+programming_language_version: 25
 content:
   - Introduction
   - Course
   - Contest
+environment_settings:
+  jvm_language_level: JDK_17
 additional_files:
   - name: .idea/inspectionProfiles/Project_Default.xml
   - name: LICENSE
