--- a/course-info.yaml
+++ b/course-info.yaml
@@ -3,7 +3,7 @@ title: Elevator-Event-Together-Java
 language: English
 summary: "This is the Elevator Event, hosted by Together Java. Use at least Java 25."
 vendor:
-  name: Daniel Tischner
+  name: Together Java
 programming_language: Java
 programming_language_version: 25
 content:
